Cambios figuras y algoritmos

--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -1090,7 +1090,6 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
   }
   \caption{Compute damage parameter $\chi_p^{k+1}$}
   \label{alg-eigens}
-  \caption{Eigensoftening algorithm}
 \end{algorithm}
 
 \section{Node-linked method for $\epsilon$-neighborhood reconstruction}
@@ -1117,7 +1116,8 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
       }      
     }
     
-  }  
+  }
+  \label{alg-node-link}
   \caption{$\epsilon$-neighborhood reconstruction algorithm}
 \end{algorithm} 
 
