--- a/_region_.tex
+++ b/_region_.tex
@@ -504,10 +504,10 @@ regularization o \textit{thermalization} parameter such that for
 Pareto optimal solutions $\beta \in
 (0,\infty)$.\MMP{Notice that $\beta$ has units of $[L]^{-2}$,
 therefore it can be controlled by adjusting a dimensionless
-parameter\footnote{To avoid confusion with the $\gamma$ parameter of
+parameter\footnote{To avoid confusion with the \gls{gamma-npc} parameter of
   the \acrshort{npc}, the dimensionless parameter defined in Arroyo \&
   Ortiz \cite{Arroyo2006} as $\gamma$ will be represent by
-  $\widehat{\gamma}$ to preserve as much as possible the original notation.},
+  \gls{gamma-lme} to preserve as much as possible the original notation.},
 $\widehat{\gamma}=\beta h^2$}, where $h$ is defined as a
 suitable measure of the nodal spacing. With the restrictions of the
 Pareto set, the unique solution of the local
@@ -914,7 +914,7 @@ the objectiveness of the obtained results. The results here exposed
 are from a discretization of 30616 material points and 6297 nodes. To
 achieve better results, an unestructured grid layout has been adopted
 focusing the minimum nodal spacing, 0.47 mm, in the middle of the beam and in
-the impact surface of the hammer. For this simulation, $\gamma$ was
+the impact surface of the hammer. For this simulation, \gls{gamma-lme} was
 fixed to 6.\\
 
 First the reaction and impact forces are validated against their
